--- a/JOBserve/View/HomeView.xib
+++ b/JOBserve/View/HomeView.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello !" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLh-17-m6w">
-                    <rect key="frame" x="40" y="84" width="133" height="40"/>
+                    <rect key="frame" x="40" y="64" width="133" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Aw6-BR-d3Z"/>
                         <constraint firstAttribute="width" constant="133" id="acb-aR-uNU"/>
@@ -31,7 +31,7 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ah-sh-il2">
-                    <rect key="frame" x="334" y="74" width="50" height="50"/>
+                    <rect key="frame" x="334" y="54" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Br7-A7-Kba"/>
                         <constraint firstAttribute="width" constant="50" id="uYp-pg-FNm"/>
@@ -46,7 +46,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhB-4C-OM4">
-                    <rect key="frame" x="274" y="74" width="50" height="50"/>
+                    <rect key="frame" x="274" y="54" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="Mvw-LW-Tgw"/>
                         <constraint firstAttribute="height" constant="50" id="ahw-Q2-zhP"/>
@@ -61,8 +61,8 @@
                     </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="FeD-sS-Vdj">
-                    <rect key="frame" x="10" y="174" width="404" height="588"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sH5-y4-fcb">
+                    <rect key="frame" x="10" y="124" width="394" height="738"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sH5-y4-fcb">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -73,16 +73,16 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.97627657649999999" green="0.74229723219999999" blue="0.16290172929999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="FeD-sS-Vdj" firstAttribute="top" secondItem="GLh-17-m6w" secondAttribute="bottom" constant="50" id="0cK-x6-j3C"/>
+                <constraint firstItem="FeD-sS-Vdj" firstAttribute="top" secondItem="GLh-17-m6w" secondAttribute="bottom" constant="20" id="0cK-x6-j3C"/>
                 <constraint firstItem="FeD-sS-Vdj" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="3YA-Xv-K1s"/>
                 <constraint firstItem="GLh-17-m6w" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="40" id="Eyu-Q1-jKw"/>
                 <constraint firstItem="6ah-sh-il2" firstAttribute="leading" secondItem="dhB-4C-OM4" secondAttribute="trailing" constant="10" id="JC0-T9-cHE"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="6ah-sh-il2" secondAttribute="trailing" constant="30" id="QcE-8u-n3m"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FeD-sS-Vdj" secondAttribute="bottom" constant="100" id="bpw-wh-Raz"/>
-                <constraint firstItem="dhB-4C-OM4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="30" id="ebP-0c-qYM"/>
-                <constraint firstItem="GLh-17-m6w" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="kDh-eQ-Pf6"/>
-                <constraint firstItem="6ah-sh-il2" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="30" id="lfX-bw-492"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="FeD-sS-Vdj" secondAttribute="trailing" id="um5-Bx-xmW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FeD-sS-Vdj" secondAttribute="bottom" id="bpw-wh-Raz"/>
+                <constraint firstItem="dhB-4C-OM4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="ebP-0c-qYM"/>
+                <constraint firstItem="GLh-17-m6w" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="kDh-eQ-Pf6"/>
+                <constraint firstItem="6ah-sh-il2" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="lfX-bw-492"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="FeD-sS-Vdj" secondAttribute="trailing" constant="10" id="um5-Bx-xmW"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="105.80357142857143"/>
         </view>
