--- a/JOBserve/View/addTopicView.xib
+++ b/JOBserve/View/addTopicView.xib
@@ -43,7 +43,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E4v-X7-yhn">
                     <rect key="frame" x="10" y="154" width="394" height="518"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Title of the new topic" borderStyle="roundedRect" placeholder="Title of the new topic" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VYO-NO-r90">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title of the new topic" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VYO-NO-r90">
                             <rect key="frame" x="10" y="20" width="374" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="no9-qj-k4h"/>
@@ -58,11 +58,11 @@
                                 <constraint firstAttribute="height" constant="5" id="rZa-80-ndU"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QgC-mR-chY">
-                            <rect key="frame" x="10" y="258" width="150" height="35"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QgC-mR-chY">
+                            <rect key="frame" x="10" y="258" width="287" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="IZ7-gb-qUa"/>
-                                <constraint firstAttribute="width" constant="150" id="f4f-S4-Lxc"/>
+                                <constraint firstAttribute="width" constant="287" id="f4f-S4-Lxc"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" image="square.and.arrow.up" catalog="system" title="Upload Image"/>
@@ -70,10 +70,10 @@
                                 <action selector="uploadImage:" destination="-1" eventType="touchUpInside" id="S3Q-kn-tL2"/>
                             </connections>
                         </button>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vYw-6p-r21">
-                            <rect key="frame" x="147" y="348" width="100" height="150"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vYw-6p-r21">
+                            <rect key="frame" x="122" y="348" width="150" height="150"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="100" id="7kj-KU-x9M"/>
+                                <constraint firstAttribute="width" constant="150" id="7kj-KU-x9M"/>
                                 <constraint firstAttribute="height" constant="150" id="cOf-Ao-a4b"/>
                             </constraints>
                         </imageView>
@@ -87,7 +87,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Little description here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DET-2D-H57">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Description..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DET-2D-H57">
                             <rect key="frame" x="10" y="110" width="374" height="128"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <color key="textColor" systemColor="labelColor"/>
@@ -124,7 +124,7 @@
                     <color key="tintColor" name="AccentColor"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Propose Topics">
-                        <color key="baseForegroundColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
+                        <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </buttonConfiguration>
                     <connections>
                         <action selector="addTopicTapped:" destination="-1" eventType="touchUpInside" id="n0x-ZI-VfK"/>
@@ -161,9 +161,6 @@
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="tertiarySystemGroupedBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
