--- a/JOBserve/View/topicCVC.xib
+++ b/JOBserve/View/topicCVC.xib
@@ -10,18 +10,40 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="topicCell" id="gTV-IL-0wX" customClass="topicCVC" customModule="JOBserve" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="350" height="274"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                <rect key="frame" x="0.0" y="0.0" width="350" height="274"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RQl-2z-HEs">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RQl-2z-HEs">
+                        <rect key="frame" x="0.0" y="0.0" width="350" height="274"/>
+                    </imageView>
+                    <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZqR-1E-3iC">
+                        <rect key="frame" x="0.0" y="0.0" width="350" height="274"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="C4q-2k-NXr">
+                        <rect key="frame" x="310" y="10.5" width="30" height="29"/>
+                        <color key="tintColor" red="0.21471338867015854" green="1" blue="0.25593973494677147" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="Kha-N7-uEI"/>
+                            <constraint firstAttribute="height" constant="30" id="ZQp-LB-9sm"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Topic's name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5od-QK-pnE">
-                        <rect key="frame" x="20" y="20" width="160" height="260"/>
+                        <rect key="frame" x="10" y="15" width="330" height="259"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="35"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhg-SD-50v">
+                        <rect key="frame" x="20" y="15" width="120" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="YwQ-wV-bTM"/>
+                            <constraint firstAttribute="width" constant="120" id="fOd-vX-qIu"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -32,18 +54,31 @@
                 <constraint firstItem="RQl-2z-HEs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="4bC-Nf-ZGL"/>
                 <constraint firstItem="RQl-2z-HEs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="5UG-C3-z79"/>
                 <constraint firstAttribute="trailing" secondItem="RQl-2z-HEs" secondAttribute="trailing" id="6La-Uq-wpa"/>
-                <constraint firstAttribute="trailing" secondItem="5od-QK-pnE" secondAttribute="trailing" constant="20" id="7pR-df-Pqo"/>
+                <constraint firstItem="5od-QK-pnE" firstAttribute="top" secondItem="zhg-SD-50v" secondAttribute="top" id="6Mz-fh-0cv"/>
+                <constraint firstItem="zhg-SD-50v" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="7gW-z1-HH8"/>
+                <constraint firstItem="C4q-2k-NXr" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="8Ap-F9-eCx"/>
                 <constraint firstAttribute="bottom" secondItem="RQl-2z-HEs" secondAttribute="bottom" id="HRi-LT-fEc"/>
-                <constraint firstItem="5od-QK-pnE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="mga-fk-Oph"/>
-                <constraint firstItem="5od-QK-pnE" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="qNF-Uk-PwR"/>
-                <constraint firstAttribute="bottom" secondItem="5od-QK-pnE" secondAttribute="bottom" constant="20" id="zaX-eh-SEy"/>
+                <constraint firstItem="5od-QK-pnE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="KR7-np-imf"/>
+                <constraint firstAttribute="trailing" secondItem="5od-QK-pnE" secondAttribute="trailing" constant="10" id="N1E-oN-jkv"/>
+                <constraint firstAttribute="bottom" secondItem="5od-QK-pnE" secondAttribute="bottom" id="Q9b-LK-Wah"/>
+                <constraint firstAttribute="trailing" secondItem="ZqR-1E-3iC" secondAttribute="trailing" id="XWp-lf-RWg"/>
+                <constraint firstItem="ZqR-1E-3iC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="fMq-id-fHv"/>
+                <constraint firstItem="zhg-SD-50v" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="ffL-aU-GKW"/>
+                <constraint firstAttribute="trailing" secondItem="C4q-2k-NXr" secondAttribute="trailing" constant="10" id="lEj-29-oMU"/>
+                <constraint firstAttribute="bottom" secondItem="ZqR-1E-3iC" secondAttribute="bottom" id="owL-P4-dsX"/>
+                <constraint firstItem="ZqR-1E-3iC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="sPW-bA-uJd"/>
             </constraints>
-            <size key="customSize" width="200" height="300"/>
+            <size key="customSize" width="350" height="274"/>
             <connections>
+                <outlet property="isVotedImage" destination="C4q-2k-NXr" id="yjd-Vz-hPL"/>
+                <outlet property="statusLabel" destination="zhg-SD-50v" id="pkH-TT-VdX"/>
                 <outlet property="topicImage" destination="RQl-2z-HEs" id="wYo-sU-ylY"/>
-                <outlet property="topicTitleLabel" destination="5od-QK-pnE" id="mi4-vC-aCy"/>
+                <outlet property="topicTitleLabel" destination="5od-QK-pnE" id="AnI-FV-T2I"/>
             </connections>
-            <point key="canvasLocation" x="240.57971014492756" y="26.116071428571427"/>
+            <point key="canvasLocation" x="349.27536231884062" y="34.821428571428569"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
