--- a/JOBserve/View/HomeView.xib
+++ b/JOBserve/View/HomeView.xib
@@ -20,11 +20,11 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello !" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLh-17-m6w">
-                    <rect key="frame" x="40" y="64" width="133" height="40"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bonjour !" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLh-17-m6w">
+                    <rect key="frame" x="30" y="64" width="140" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Aw6-BR-d3Z"/>
-                        <constraint firstAttribute="width" constant="133" id="acb-aR-uNU"/>
+                        <constraint firstAttribute="width" constant="140" id="acb-aR-uNU"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -92,7 +92,7 @@
             <constraints>
                 <constraint firstItem="FeD-sS-Vdj" firstAttribute="top" secondItem="GLh-17-m6w" secondAttribute="bottom" constant="20" id="0cK-x6-j3C"/>
                 <constraint firstItem="FeD-sS-Vdj" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="3YA-Xv-K1s"/>
-                <constraint firstItem="GLh-17-m6w" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="40" id="Eyu-Q1-jKw"/>
+                <constraint firstItem="GLh-17-m6w" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="Eyu-Q1-jKw"/>
                 <constraint firstItem="6ah-sh-il2" firstAttribute="leading" secondItem="dhB-4C-OM4" secondAttribute="trailing" constant="10" id="JC0-T9-cHE"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="6ah-sh-il2" secondAttribute="trailing" constant="30" id="QcE-8u-n3m"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FeD-sS-Vdj" secondAttribute="bottom" id="bpw-wh-Raz"/>
