--- a/JOBserve/View/securityView.xib
+++ b/JOBserve/View/securityView.xib
@@ -140,7 +140,9 @@
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="tintColor" systemColor="systemPinkColor"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" image="power.circle" catalog="system" imagePlacement="top" title="Log out"/>
+                                    <buttonConfiguration key="configuration" style="plain" image="power.circle" catalog="system" imagePlacement="top" title="Deconnexion">
+                                        <fontDescription key="titleFontDescription" type="system" pointSize="9"/>
+                                    </buttonConfiguration>
                                     <connections>
                                         <action selector="logOutTapped:" destination="-1" eventType="touchUpInside" id="BpN-Cn-dYo"/>
                                     </connections>
@@ -150,7 +152,7 @@
                                 <constraint firstAttribute="height" constant="50" id="ofB-m8-ztE"/>
                             </constraints>
                         </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Security" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0L-p2-mXQ">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Securité" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0L-p2-mXQ">
                             <rect key="frame" x="20" y="114" width="374" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="M10-Hf-bIQ"/>
