--- a/JOBserve/View/topicSendView.xib
+++ b/JOBserve/View/topicSendView.xib
@@ -66,7 +66,7 @@
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="tintColor" systemColor="systemPinkColor"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" image="lock.circle" catalog="system" imagePlacement="top" title="Security"/>
+                                    <buttonConfiguration key="configuration" style="plain" image="lock.circle" catalog="system" imagePlacement="top" title="Securité"/>
                                     <connections>
                                         <action selector="securityTapped:" destination="-1" eventType="touchUpInside" id="5KF-Y8-b11"/>
                                     </connections>
@@ -83,7 +83,9 @@
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="tintColor" systemColor="systemPinkColor"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" image="power.circle" catalog="system" imagePlacement="top" title="Log out"/>
+                                    <buttonConfiguration key="configuration" style="plain" image="power.circle" catalog="system" imagePlacement="top" title="Deconnexion">
+                                        <fontDescription key="titleFontDescription" type="system" pointSize="9"/>
+                                    </buttonConfiguration>
                                     <connections>
                                         <action selector="logOutTapped:" destination="-1" eventType="touchUpInside" id="A44-J0-ml2"/>
                                     </connections>
@@ -93,7 +95,7 @@
                                 <constraint firstAttribute="height" constant="50" id="fIR-P2-iiX"/>
                             </constraints>
                         </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Topics sended" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="llv-0b-wBU">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Topic proposé" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="llv-0b-wBU">
                             <rect key="frame" x="20" y="114" width="374" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="ILI-JN-58l"/>
