--- a/JOBserve/View/AvisTableViewCell.xib
+++ b/JOBserve/View/AvisTableViewCell.xib
@@ -10,25 +10,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="avisCell" rowHeight="100" id="KGk-i7-Jjw" customClass="AvisTableViewCell" customModule="JOBserve" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="323" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="avisCell" rowHeight="102" id="KGk-i7-Jjw" customClass="AvisTableViewCell" customModule="JOBserve" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="323" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="323" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="323" height="102"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tYb-BQ-Sud">
-                        <rect key="frame" x="5" y="5" width="313" height="90"/>
+                        <rect key="frame" x="5" y="5" width="313" height="92"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="omo-1G-TAs">
-                                <rect key="frame" x="5" y="20.5" width="50" height="49"/>
+                                <rect key="frame" x="5" y="20.5" width="50" height="51"/>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="ZX9-tQ-Gv3"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label avis" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AlH-2e-aXU">
-                                <rect key="frame" x="65" y="10" width="238" height="70"/>
+                                <rect key="frame" x="65" y="10" width="238" height="72"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -58,7 +58,7 @@
                 <outlet property="avisView" destination="tYb-BQ-Sud" id="IS2-KV-7mu"/>
                 <outlet property="avislabel" destination="AlH-2e-aXU" id="dre-uh-z9o"/>
             </connections>
-            <point key="canvasLocation" x="139.85507246376812" y="158.70535714285714"/>
+            <point key="canvasLocation" x="139.85507246376812" y="159.375"/>
         </tableViewCell>
     </objects>
     <resources>
